# shardz-master

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  routers.html  routers_authentication.html  routers_servers.html  search.html  searchindex.js  settings.py  tools.html  tools_authorization.html  tools_players.html
.doctrees/: environment.pickle  index.doctree  routers.doctree  routers_authentication.doctree  routers_servers.doctree  tools.doctree  tools_authorization.doctree  tools_players.doctree
.github/workflows/: build.yaml  gh-pages.yaml  release.yaml  tests.yaml
_sources/: routers_authentication.rst.txt  routers_servers.rst.txt
docs/doc/: conf.py  index.rst  routers.rst  tools.rst  tools_authorization.rst  tools_players.rst
server/: __init__.py  main.py  settings.py
server/routers/: __init__.py  authentication.py  servers.py
server/tools/: __init__.py  authorization.py  players.py
tests/: conftest.py  test_init.py  test_login.py  test_logout_user.py  test_servers_list.py
