[tool.poetry]
name = "Shardz Master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pytest-asyncio = "^0.19.0"
pre-commit = "^2.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
