[tool.poetry]
name = "Shardz Master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
httpx = "^0.23.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
pylint = "^2.15.2"
mypy = "^0.971"
bandit = {extras = ["toml"], version = "^1.7.4"}
nox = "^2022.8.7"
pytest-httpx = "^0.21.0"
black = "^22.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --cov=server --cov-report=term-missing:skip-covered --no-cov-on-fail --cov-fail-under=100 --cov-branch"

[tool.pylint.main]
ignore-paths = 'tests/'
jobs=0
extension-pkg-whitelist = ["pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
